tests/errors/syn_while5.java
public class syn_while5{
public static void main(String[] args){
 while ( true ) }
}
}